extends Node2D


func _ready():
	$Exit_Button_2.visible = false
	$Back_To_Main_Menu_Button_3.visible = false
	$Back_To_Main_Menu_Button_4.visible = false
	$Back_Or_Exit_Question_2.visible = false
	$Fullscreen_Control/Fullscreen_Check_Switch.visible = false
	$Fullscreen_Control/Fullscreen_Check_Text.visible = false
	$Options_Text.visible = false
